# MSI-Control-Linux

./: CMakeLists.txt  README.md  installer.sh  msi-ctl.desktop  resources.qrc  uninstall.sh
src/: globalshortcut.cpp  globalshortcut.h  main.cpp  mainwindow.cpp  mainwindow.h
